--- a/app/.htaccess
+++ b/app/.htaccess
@@ -13,5 +13,6 @@ php_value upload_max_filesize 64M
 php_value post_max_size 64M
 php_value max_execution_time 300
 php_value max_input_time 300
+php_value memory_limit 256M
 
 # END WordPress
